--- a/android_app/gradle/libs.versions.toml
+++ b/android_app/gradle/libs.versions.toml
@@ -25,6 +25,8 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 
+codescanner = { group = "com.github.yuriy-budiyev", name = "code-scanner", version = "2.1.0" }
+
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
